{
    "name": "Player2Controls",
    "maps": [
        {
            "name": "Player2",
            "id": "9e697c5d-d8f3-4ab2-a47c-1cbac070255d",
            "actions": [
                {
                    "name": "Move2",
                    "type": "PassThrough",
                    "id": "812b2a8d-280b-4f7b-a79e-8644de5013aa",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "ac2fa034-08cc-44c2-bd2a-5b85d8cdeefd",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move2",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "ea4499c1-c7b7-4cc5-bee0-824b3d4dd32a",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move2",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "1ec3ec66-82c0-4a9f-8bb0-1fb2cf2c2952",
                    "path": "<Keyboard>/k",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move2",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "054e418f-0e99-48f1-af0d-4a9716c94574",
                    "path": "<Keyboard>/j",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move2",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "3fac00b8-85e7-4325-af39-8d00920bf1b6",
                    "path": "<Keyboard>/l",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move2",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}